@@ -4,3 +4,4 @@ main_module = bin/yatg_updater
 
 [@Author::OLIVER]
 major_version = 4
+skip_deps = RPC::Serialized::Handler|RPC::Serialized::Client::INET|Tie::File::FixedRecLen|Tie::File::FixedRecLen::Store|Time::Local|integer|Fcntl|Cache::Memcached
