@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+  * Remove all non-essential dependencies. User must install deps for each plugin.
+
 4.112532  2011-09-10 14:24:35 Europe/London
 
   * Make NSCA config optional (D. Walrond)
